--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Love Animation</title>
+  <title>For Zefa</title>
   <style>
     /* @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@700&family=Poppins:wght@400;700&display=swap'); */
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
